feat: colors and tailwind

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -12,6 +12,8 @@
     "colors_background_1": "#f2efdd",
     "colors-base-logo-background-1": "#FF2949",
     "colors_neutral_background_button": "#FFD142",
+    "colors_text_neutral_button": "#FFF",
+    "colors_text_default": "#505050",
     "gradient_background_1": "",
     "colors_background_2": "#faf9e1",
     "gradient_background_2": "",
@@ -203,6 +205,8 @@
       "colors_text": "#3d081b",
       "colors_logo": "#FF2949",
       "colors_neutral_background_button": "#FFD142",
+      "colors_text_neutral_button": "#FFF",
+      "colors_text_default": "#505050",
       "colors_outline_button_labels": "#3d081b",
       "colors_background_1": "#f2efdd",
       "gradient_background_1": "",
