feat: product page editor

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -90,9 +90,9 @@
     "sold_out_badge_color_scheme": "background-1",
     "accent_icons": "text",
     "social_twitter_link": "",
-    "social_facebook_link": "",
+    "social_facebook_link": "https:\/\/www.facebook.com\/pages\/category\/Wine-spirits\/La-cave-des-Intenables-Dorlisheim-106527517912554\/",
     "social_pinterest_link": "",
-    "social_instagram_link": "",
+    "social_instagram_link": "https:\/\/untappd.com\/LesIntenablesCraftBeer\/beer?fbclid=IwAR2_nnGCTAk4dOHNSjJFCVIj8EsAPp4eEmoAp1w1CKUCR7Pswkb5SO2iN1A",
     "social_tiktok_link": "",
     "social_tumblr_link": "",
     "social_snapchat_link": "",
@@ -167,7 +167,7 @@
         "settings": {
           "color_scheme": "accent-1",
           "newsletter_enable": false,
-          "newsletter_heading": "Subscribe to our emails",
+          "newsletter_heading": "Inscrivez-vous à la newsletter",
           "show_social": true,
           "enable_country_selector": true,
           "enable_language_selector": true,
