feat: about us ok

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -9,6 +9,8 @@
     "gradient_accent_1": "",
     "colors_accent_2": "#910f3f",
     "gradient_accent_2": "",
+    "colors_neutral_gradient": "#FFF",
+    "colors_base_text_boxes_border": "#FF2949",
     "colors_text": "#3d081b",
     "colors_text_logo": "#FF2949",
     "colors_outline_button_labels": "#3d081b",
@@ -207,6 +209,8 @@
       "colors_neutral_background_button": "#FFD142",
       "colors_text_neutral_button": "#FFF",
       "colors_text_default": "#505050",
+      "colors_neutral_gradient": "#FFF",
+      "colors_base_text_boxes_border": "#FF2949",
       "colors_outline_button_labels": "#3d081b",
       "colors_background_1": "#f2efdd",
       "gradient_background_1": "",
