feat: responsive and wireframe like

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -112,6 +112,8 @@
             "type": "announcement",
             "settings": {
               "text": "PROMO : livraison gratuite dès 50€ d’achat aujourd’hui et demain !",
+              "text_color": "#ffffff",
+              "background_color": "#ff2949",
               "color_scheme": "accent-2",
               "link": ""
             }
@@ -127,7 +129,8 @@
         "type": "header",
         "settings": {
           "color_scheme": "background-1",
-          "logo_width": 70,
+          "logo": "shopify:\/\/shop_images\/logo_complet.png",
+          "logo_width": 100,
           "logo_position": "middle-left",
           "menu": "main-menu",
           "menu_type_desktop": "dropdown",
@@ -142,7 +145,8 @@
           "image": {
             "type": "image",
             "settings": {
-              "image_width": 80,
+              "image": "shopify:\/\/shop_images\/logo_complet_blanc.png",
+              "image_width": 100,
               "alignment": "center"
             }
           },
@@ -150,14 +154,19 @@
             "type": "link_list",
             "settings": {
               "heading": "Liens",
-              "menu": "footer"
+              "menu": "footer",
+              "link_color": "#faf7f7",
+              "link_title_color": "#ffffff"
             }
           },
           "text": {
             "type": "text",
             "settings": {
               "heading": "Le site Cavamie",
-              "subtext": "<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.<\/p>"
+              "subtext": "<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.<\/p>",
+              "text_title_color": "#ffffff",
+              "text_color": "#ffffff",
+              "font_weight": "300"
             }
           }
         },
@@ -167,7 +176,7 @@
           "text"
         ],
         "settings": {
-          "color_scheme": "accent-1",
+          "background_color": "#ff2949",
           "newsletter_enable": false,
           "newsletter_heading": "Inscrivez-vous à la newsletter",
           "show_social": true,
@@ -176,7 +185,7 @@
           "payment_enable": true,
           "margin_top": 0,
           "padding_top": 64,
-          "padding_bottom": 36
+          "padding_bottom": 0
         }
       },
       "main-password-header": {
