--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -21,7 +21,7 @@
     "gradient_background_2": "",
     "type_header_font": "poppins_n4",
     "heading_scale": 120,
-    "type_body_font": "archivo_n4",
+    "type_body_font": "poppins_n4",
     "body_scale": 100,
     "page_width": 1400,
     "spacing_sections": 64,
@@ -103,6 +103,7 @@
     "predictive_search_enabled": true,
     "predictive_search_show_vendor": false,
     "predictive_search_show_price": true,
+    "favicon": "shopify:\/\/shop_images\/logo.png",
     "currency_code_enabled": false,
     "sections": {
       "announcement-bar": {
@@ -132,6 +133,7 @@
           "logo": "shopify:\/\/shop_images\/logo_complet.png",
           "logo_width": 100,
           "logo_position": "middle-left",
+          "submenu": "",
           "menu": "main-menu",
           "menu_type_desktop": "dropdown",
           "show_line_separator": false,
