--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -50,7 +50,7 @@
     "inputs_shadow_horizontal_offset": 0,
     "inputs_shadow_vertical_offset": 0,
     "inputs_shadow_blur": 0,
-    "card_style": "card",
+    "card_style": "standard",
     "card_image_padding": 0,
     "card_text_alignment": "left",
     "card_color_scheme": "neutral",
@@ -80,7 +80,7 @@
     "popup_corner_radius": 12,
     "popup_shadow_opacity": 100,
     "popup_shadow_horizontal_offset": 0,
-    "popup_shadow_vertical_offset": 2,
+    "popup_shadow_vertical_offset": 0,
     "popup_shadow_blur": 0,
     "drawer_border_thickness": 3,
     "drawer_border_opacity": 10,
